# todoshnik

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
migrations/versions/: 2025-03-17_init_fbf04c5afac8.py  2025-03-19_remove_deadline_88d1cb8dd80c.py
todoshnik/: __init__.py  logger.py  main.py  pages.py  schemas.py  services.py  templates.py
todoshnik/database/: dto.py  models.py  plugin.py  repository.py
todoshnik/ui/: components.py  pages.py
ui/: package-lock.json  package.json
ui/public/: hdb.js
ui/src/: index.html
ui/src/assets/: animations.css  main-raw.css  main.css  main.tw.css
ui/src/components/: header.html  task_item.html
ui/src/components/dialogs/: base.html  create_task.html
ui/src/pages/: done_tasks.html  index.html  tags.html  tasks.html
