[project]
name = "todoshnik"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "litestar[standard,pydantic,sqlalchemy,structlog]>=2.15.1",
    "pytz>=2025.1",
]

[dependency-groups]
dev = [
    "mypy[reports]>=1.15.0",
    "pip-audit>=2.8.0",
    "ruff>=0.9.10",
    "types-pytz>=2025.1.0.20250204",
    "wemake-python-styleguide>=1.0.0",
]

[tool.ruff]
include = ["todoshnik/**/*.py"]
line-length = 79
target-version = "py312"


[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "Q", # flake8-quotes
    "UP", # pyupgrade
    "PT", # flake8-pytest-style
    "RUF", # ruff specific
    "FAST", # FastAPI
    "ASYNC", # flake8-async
    "TRY", # tryceratops
    "TC", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "FLY", # flynt
    "PERF", # perflint
    "FURB", # refurb
    "C4", # flake8-comprehensions
    "A", # flake8-builtins
    "FBT", # flake8-boolean-trap
    "YTT", # flake8-2020
    "TID", # flake8-tidy-imports
    "RSE", # flake8-raise
    "RET", # flake8-return
]
ignore = [
    "COM812", # ruff formatter warn on it
    "RUF029", # sometimes incorrect
]
preview = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.mypy]
packages = ['todoshnik']
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true
